objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Auto_Subscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Subscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Display_On_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control flag.  When checked, we should show this session on the badge.</description>
        <label>Display On Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Room / Location for the breakout session</description>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Child_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>This field is created for the CR-20150819-9166.</description>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>DateTime__c</columns>
        <columns>Location__c</columns>
        <columns>Parent_Meeting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Meetings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>